@@ -10,6 +10,9 @@
   - filesCache is the files extracted from other images
   - applicationCache are the test applications runtime cache (15.x containers)
   - bakFolderCache are version specific backup sets
+  - bcartifacts are artifacts downloaded for spinning up containers.
+ .Parameter keepDays
+  When specifying a value in keepDays, the function will try to keep cached information, which has been used during the last keepDays days. Default is 0 - to flush all cache.
  .Example
   Flush-ContainerHelperCache -cache calSourceCache
 #>
@@ -17,7 +20,8 @@ function Flush-ContainerHelperCache {
     [CmdletBinding()]
     Param (
         [ValidateSet('all','calSourceCache','alSourceCache','applicationCache','bakFolderCache','filesCache','bcartifacts')]
-        [string] $cache = 'all'
+        [string] $cache = 'all',
+        [int] $keepDays = 0
     )
 
     $folders = @()
@@ -31,9 +35,37 @@ function Flush-ContainerHelperCache {
 
     if ($cache -eq 'all' -or $cache -eq 'bcartifacts') {
         if (Test-Path "c:\bcartifacts.cache") {
-            Get-ChildItem -Path 'c:\bcartifacts.cache' | ?{ $_.PSIsContainer } | ForEach-Object {
-                Write-Host "Removing Cache $($_.FullName)"
-                [System.IO.Directory]::Delete($_.FullName, $true)
+            if ($keepDays) {
+                $removeBefore = [DateTime]::Now.Subtract([timespan]::FromDays($keepDays))
+                Get-ChildItem -Path 'c:\bcartifacts.cache' | ?{ $_.PSIsContainer } | ForEach-Object {
+                    $level1 = $_.FullName
+                    Get-ChildItem -Path $level1 | ?{ $_.PSIsContainer } | ForEach-Object {
+                        $level2 = $_.FullName
+                        Get-ChildItem -Path $level2 | ?{ $_.PSIsContainer } | ForEach-Object {
+                            $level3 = $_.FullName
+                            $lastUsedFileName = Join-Path $level3 "LastUsed"
+                            if (Test-Path $lastUsedFileName) {
+                                $lastUsedFile = Get-Item $lastUsedFileName
+                                if ($lastUsedFile.LastWriteTime -lt $removeBefore) {
+                                    Write-Host "Removing $level3"
+                                    Remove-Item $level3 -Recurse -Force
+                                }
+                            }
+                        }
+                        if (-not (Get-ChildItem -Path $level2)) {
+                            Remove-Item $level2 -Force
+                        }
+                    }
+                    if (-not (Get-ChildItem -Path $level1)) {
+                        Remove-Item $level1 -Force
+                    }
+                }
+            }
+            else {
+                Get-ChildItem -Path 'c:\bcartifacts.cache' | ?{ $_.PSIsContainer } | ForEach-Object {
+                    Write-Host "Removing Cache $($_.FullName)"
+                    [System.IO.Directory]::Delete($_.FullName, $true)
+                }
             }
         }
     }
